# Star-engine

./: .gitignore  CMakeLists.txt  README.md  test.txt
Star-engine/: .gitignore  CMakeLists.txt
Star-engine/engine/: main
Star-engine/engine/include/: camera.hpp  input.hpp  program.hpp  scene.hpp  spatial.hpp
Star-engine/engine/shaders/: fragment_shader.glsl  fragment_shader_mountain.glsl  vertex_shader_mountain.glsl
Star-engine/engine/src/: camera.cpp  input.cpp  main.cpp  program.cpp  scene.cpp  spatial.cpp
TP1/include/: camera.hpp  input.hpp  scene.hpp  texture.hpp
TP1/shaders/: fragment_shader.glsl  vertex_shader.glsl
TP1/src/: main.cpp  texture.cpp
assets/images/PBR/rock/: A23DMAT_MDL_OmniPBR.mdl
assets/images/pbr_rock/: A23DMAT_MDL_OmniUE4.mdl
assets/meshes/: Mario-walk.glb  cabane.glb
assets/meshes/Player/: mario-space.glb
assets/meshes/Player/test/: license.txt  scene.gltf
assets/meshes/Props/: Egg.glb  crate.glb  pipe.glb  planet_1.glb
common/: json.hpp  shader.cpp
engine/: imgui.ini
engine/include/: animation.hpp  camera.hpp  geometryHelper.hpp  globalIllumination.hpp  input.hpp  program.hpp  rendering.hpp  scene.hpp  spatial.hpp
engine/include/API/: AssetLoader.hpp  FileSystem.hpp
engine/include/API/ResourceManagement/: IResource.hpp  ResourceManager.hpp
engine/include/ecs/: ecsManager.hpp  ecsWithoutInspector.hpp
engine/include/ecs/base/: component.hpp  entity.hpp  system.hpp
engine/include/ecs/implementations/: componentInspector.hpp  components.hpp  systems.hpp
engine/include/rendering/: common.hpp  rendering.hpp
engine/scenes/: test.json
engine/shaders/: fragment_shader.glsl  fragment_shader_mountain.glsl  vertex_shader.glsl  vertex_shader_mountain.glsl
engine/shaders/GI/: common.glsl  solution.glsl
engine/shaders/cubemap/: vertex.glsl
engine/shaders/debug/: fragment.glsl  vertex.glsl
engine/shaders/include/: octahedral.glsl
engine/shaders/infos/: fragment.glsl  vertex.glsl
engine/shaders/pbr/: fragment_shader.glsl  vertex_shader.glsl
engine/shaders/skybox/: BRDF_fs.glsl  fragment.glsl  irradiance_convolution.glsl  prefilter.glsl  vertex.glsl
engine/src/: animation.cpp  camera.cpp  components.cpp  input.cpp  main.cpp  program.cpp  rendering.cpp  scene.cpp  spatial.cpp  systems.cpp
engine/src/API/: AssetLoader.cpp
engine/src/physic/: physic.cpp
engine/src/rendering/: MeshHelper.cpp  programs.cpp  systems.cpp  temp.cpp
engine/src/systems/: physic.cpp
pictures/: 18.ppm  25.ppm  32.ppm  39.ppm  46.ppm  53.ppm  info.ppm  octaProj.ppm  test.ppm  verif.ppm
